#CAM-0033 * 授权数据修改